--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,12 @@
-pandas==2.1.4
+transformers==2.11.0
+pandas
+numpy==1.22.0
+joblib==1.2.0
+tqdm==4.50.2
+pytorch_lightning==1.1.2
+torch==1.3.1
+nltk==3.6.6
+scipy==1.3.3
+rdflib==4.2.2
+torchtext==0.4.0
+scikit_learn==0.24.1
