--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,13 @@
-transformers==2.11.0
-pandas
+pandas==2.3.0
 numpy==1.22.0
 joblib==1.2.0
 tqdm==4.50.2
 pytorch_lightning==1.1.2
-torch==1.3.1
-nltk==3.6.6
+nltk==3.9.1
 scipy==1.3.3
 rdflib==4.2.2
 torchtext==0.4.0
 scikit_learn==0.24.1
+numpy==2.2.6
+torch==2.7.1
+transformers==4.52.4
